--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@mantine/hooks": "^7.15.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -36,6 +38,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
+    "uuid": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
